tests/invalid/foreign_purity_mismatch.err_exp3
foreign_purity_mismatch.m:010: Error: predicate [38;5;87m`pure_with_impure'/1[39;49m is [38;5;203mimpure.[39;49m
foreign_purity_mismatch.m:010:   It must either be [38;5;40mdeclared impure,[39;49m or [38;5;40mpromised[39;49m
foreign_purity_mismatch.m:010:   [38;5;40mpure.[39;49m
foreign_purity_mismatch.m:011: Error: predicate [38;5;87m`pure_with_semipure'/1[39;49m is
foreign_purity_mismatch.m:011:   [38;5;203msemipure.[39;49m It must either be [38;5;40mdeclared semipure,[39;49m
foreign_purity_mismatch.m:011:   or [38;5;40mpromised pure.[39;49m
foreign_purity_mismatch.m:013: Error: predicate [38;5;87m`semipure_with_impure'/1[39;49m is
foreign_purity_mismatch.m:013:   [38;5;203mimpure.[39;49m It must either be [38;5;40mdeclared impure,[39;49m or
foreign_purity_mismatch.m:013:   [38;5;40mpromised semipure.[39;49m
foreign_purity_mismatch.m:038: Error: foreign clause for predicate
foreign_purity_mismatch.m:038:   `pure_with_impure'/1 has purity [38;5;203mimpure,[39;49m but
foreign_purity_mismatch.m:038:   that predicate has been declared [38;5;40mpure.[39;49m
foreign_purity_mismatch.m:059: Error: foreign clause for predicate
foreign_purity_mismatch.m:059:   `pure_with_semipure'/1 has purity [38;5;203msemipure,[39;49m
foreign_purity_mismatch.m:059:   but that predicate has been declared [38;5;40mpure.[39;49m
foreign_purity_mismatch.m:080: Error: foreign clause for predicate
foreign_purity_mismatch.m:080:   `semipure_with_impure'/1 has purity [38;5;203mimpure,[39;49m
foreign_purity_mismatch.m:080:   but that predicate has been declared [38;5;40msemipure.[39;49m
foreign_purity_mismatch.m:101: Error: foreign clause for predicate
foreign_purity_mismatch.m:101:   `semipure_with_pure'/1 has purity [38;5;203mpure,[39;49m but
foreign_purity_mismatch.m:101:   that predicate has been declared [38;5;40msemipure.[39;49m
foreign_purity_mismatch.m:122: Error: foreign clause for predicate
foreign_purity_mismatch.m:122:   `impure_with_pure'/1 has purity [38;5;203mpure,[39;49m but that
foreign_purity_mismatch.m:122:   predicate has been declared [38;5;40mimpure.[39;49m
foreign_purity_mismatch.m:143: Error: foreign clause for predicate
foreign_purity_mismatch.m:143:   `impure_with_semipure'/1 has purity [38;5;203msemipure,[39;49m
foreign_purity_mismatch.m:143:   but that predicate has been declared [38;5;40mimpure.[39;49m
